<resources>
    <string name="app_name" translatable="false">Cucon</string>
    <string name="title_activity_settings">Settings</string>
    <string name="appVersion">Version: 0.1.3 BETA</string>
    <string name="fiat">Fiat</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="choose_language">Choose language</string>
    <string name="language">Language</string>
    <string name="choose_currency">Choose currency</string>
    <string name="sourceCode">Source code</string>
    <string name="creator">Creator: Semyon Novikov</string>
    <string name="font">Font</string>
    <string name="textSize">Font size</string>
    <string name="theme">Theme</string>
    <string name="clickAgainToExit">Click again to exit</string>
</resources>
