<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="Светлая"
        android:dialogTitle="Тема"
        android:entries="@array/themes"
        android:entryValues="@array/themes"
        android:key="theme"
        android:title="@string/theme" />

    <ListPreference
        android:defaultValue="1.0"
        android:dialogTitle="Выберите размер текста"
        android:entries="@array/textSize"
        android:entryValues="@array/textSize"
        android:key="textSize"
        android:title="@string/textSize"/>

    <ListPreference
        android:defaultValue="Lato"
        android:dialogTitle="Выберите шрифт"
        android:entries="@array/textFont"
        android:entryValues="@array/textFont"
        android:key="textFont"
        android:title="@string/font"/>

    <ListPreference
        android:dialogTitle="@string/choose_language"
        android:entries="@array/languages"
        android:entryValues="@array/languages"
        android:key="language"
        android:title="@string/language" />

    <Preference
        android:title="@string/appVersion" />

    <Preference
        android:title="@string/creator"/>

    <Preference
        android:key="github"
        android:title="@string/sourceCode"/>

</PreferenceScreen>